[package]
name = "pcobs"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
description = "Binary encoding for structured data communication"
license = "MIT"
authors = ["Ivan Yaremenchuk <trooper982@gmail.com>"]
repository = "https://github.com/darkcodi/pcobs"
keywords = ["cobs", "postcard", "serde", "no_std", "embedded"]
categories = ["encoding", "no-std::no-alloc", "embedded"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
crc = "3.4"
postcard = { version = "1.1", default-features = false }
corncobs = "0.1"